--- a/template.html
+++ b/template.html
@@ -1,9 +1,41 @@
 <!DOCTYPE html>
+<!-- Student Name: Alora Bucey
+    File Name: Ch2 Lab 2
+    Date: 02-06-2025 -->
+<html lang="en">
 <head>
-<title>Pacific Trails Resort</title>
+<title>Wild Rescues Home</title>
 <meta charset="utf-8">
 </head>
-<body>
 
+<body>
+<!-- Header -->
+    <header>
+        <h1>&#128062; Wild Rescues</h1>
+        <h3>Rescue. Rehabilitate. Release.</h3>
+    </header>
+
+<!-- Navigation -->
+    <nav>
+        <p>Home &nbsp; &#9672; &nbsp;
+            About Us &nbsp; &#9672; &nbsp;
+            Partnership &nbsp; &#9672; &nbsp;
+            Gallery &nbsp; &#9672; &nbsp;
+            FAQs &nbsp; &#9672; &nbsp;
+            Contact</p>
+    </nav>
+
+<!-- Use the main area to add main content to the webpage -->
+    <main>
+        <p>Welcome to Wild Rescues. Our mission is to rescue, rehabilitate, and release wildlife back into their natural environment. We are a non-profit organization dedicated to helping injured wildlife.</p>
+        <p>Our staff provides around-the-clock care for wildlife and need. We also provide long-term care for wildlife that cannot be released back into their natural environment.</p>
+        <p>Will you partner with us? We need caring volunteers to help care for our animals. You can also donate, become a member, or become a sponsor. Call us today.</p>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; Copyright 2025. All Rights Reserved.</p>
+        <p>contact@wildrescues.net</p>
+    </footer>
 </body>
 </html>
